--- a/src/components/header.css
+++ b/src/components/header.css
@@ -14,7 +14,16 @@ h1 {
     vertical-align: top;
     float: right;    
     margin-top: 10px;
+    position: sticky;
+    top:0;
   }
+  header 
+  {
+    background: rgb(255, 177, 14);
+    position: sticky;
+    top: 0;
+    z-index: 5;
+}
   
   .header a {
     float: left;
@@ -26,8 +35,10 @@ h1 {
     line-height: 25px;
     padding-top: 13px;
     padding-bottom: 9px;
+    margin-right: 18px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
+    text-transform:uppercase;
   }
 
 .header a:hover {
@@ -36,15 +47,17 @@ h1 {
 }
 .header-right {
     /* float: right; */
+    margin-top: 20px;
 }
 .logo {
     /* background-image: url(../images/pedigree-logo.png); */
     /* display: block; */
-    width: 72px;
+    width:111px;
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
     background-position: center;
     display: inline-block;
+    margin: 0;
 }
 .header-right .glyphicon {
     position: relative;
